--- a/demouiza/src/main/res/layout/uiza_setting_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_setting_activity.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/Red">
+    android:layout_height="match_parent">
 
     <ScrollView
         android:id="@+id/scroll_view"
@@ -12,12 +10,52 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="@dimen/padding_5">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Choose your skin"
+                android:textColor="@color/Black"
+                android:textSize="@dimen/txt_30"
+                android:textStyle="bold" />
 
-        </RelativeLayout>
+            <RadioGroup
+                android:id="@+id/radio_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/radio_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="Skin 1"
+                    android:textSize="@dimen/txt_20"
+                    android:textStyle="bold" />
+
+                <RadioButton
+                    android:id="@+id/radio_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Skin 2"
+                    android:textSize="@dimen/txt_20"
+                    android:textStyle="bold" />
+
+                <RadioButton
+                    android:id="@+id/radio_3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Skin 3"
+                    android:textSize="@dimen/txt_20"
+                    android:textStyle="bold" />
+
+            </RadioGroup>
+        </LinearLayout>
     </ScrollView>
 </RelativeLayout>
 
