--- a/demouiza/src/main/res/layout/frm_bottom.xml
+++ b/demouiza/src/main/res/layout/frm_bottom.xml
@@ -3,7 +3,7 @@
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/White">
+    android:background="@color/colorPrimary">
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scroll_view"
@@ -20,40 +20,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/padding_5"
-                android:textColor="@color/Black"
+                android:textColor="@color/White"
                 android:textSize="@dimen/txt_18"
                 android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/padding_5"
-                android:text="@string/app_name" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/margin_10" />
-
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10">
-
-                <LinearLayout
-                    android:id="@+id/ll_horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal" />
-            </HorizontalScrollView>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
-                android:padding="@dimen/padding_5"
-                android:text="@string/app_name" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </RelativeLayout>
