--- a/demouiza/src/main/res/layout/uiza_frm_channel.xml
+++ b/demouiza/src/main/res/layout/uiza_frm_channel.xml
@@ -18,11 +18,20 @@
         android:background="@color/Red"
         android:gravity="center"
         android:padding="@dimen/padding_5"
-        android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="@dimen/txt_12"
-        android:textStyle="bold"
-        android:visibility="visible" />
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:padding="@dimen/padding_5"
+        android:textColor="@color/white"
+        android:textSize="@dimen/txt_18"
+        android:textStyle="bold" />
 
     <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
         android:id="@+id/avi"
