--- a/demouiza/src/main/res/layout/uiza_search_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_search_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -60,5 +61,18 @@
         android:textColor="@color/White"
         android:textSize="@dimen/txt_18"
         android:textStyle="bold" />
+
+    <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
+        android:id="@+id/avi"
+        style="@style/AVLoadingIndicatorView"
+        android:layout_width="@dimen/w_20"
+        android:layout_height="@dimen/w_20"
+        android:layout_below="@+id/ll_search"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/margin_55"
+        android:layout_marginTop="@dimen/margin_5"
+        app:indicatorColor="@color/White"
+        app:indicatorName="BallSpinFadeLoaderIndicator" />
 </RelativeLayout>
 
