--- a/demouiza/src/main/res/layout/uiza_search_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_search_activity.xml
@@ -17,7 +17,7 @@
         android:textSize="@dimen/txt_18"
         android:textStyle="bold" />
 
-    <vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
+    <!--<vn.loitp.views.progressloadingview.avloadingindicatorview.lib.avi.AVLoadingIndicatorView
         android:id="@+id/avi"
         style="@style/AVLoadingIndicatorView"
         android:layout_width="@dimen/w_20"
@@ -28,7 +28,7 @@
         android:layout_marginBottom="@dimen/margin_55"
         android:layout_marginTop="@dimen/margin_5"
         app:indicatorColor="@color/White"
-        app:indicatorName="BallSpinFadeLoaderIndicator" />
+        app:indicatorName="BallSpinFadeLoaderIndicator" />-->
 
     <vn.loitp.views.placeholderview.lib.placeholderview.PlaceHolderView
         android:id="@+id/place_holder_view"
