--- a/corebase/src/main/res/values/dimens.xml
+++ b/corebase/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="txt_30">30dp</dimen>
     <dimen name="txt_80">80dp</dimen>
     <dimen name="padding_3">3dp</dimen>
+    <dimen name="round_5">5dp</dimen>
     <dimen name="round_15">15dp</dimen>
     <dimen name="round_55">55dp</dimen>
     <dimen name="round_80">80dp</dimen>
