--- a/demouiza/src/main/res/layout/uiza_option_activity.xml
+++ b/demouiza/src/main/res/layout/uiza_option_activity.xml
@@ -38,10 +38,10 @@
                 android:contentDescription="@string/app_name"
                 android:src="@drawable/uiza_logo_512" />
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_above="@+id/bt_start"
                 android:orientation="vertical"
                 android:padding="@dimen/padding_5">
 
@@ -223,22 +223,18 @@
                     android:layout_height="@dimen/w_1"
                     android:layout_margin="@dimen/margin_10"
                     android:background="@color/White" />
-
-                <Button
-                    android:id="@+id/bt_0"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_above="@+id/bt_1"
-                    android:text="Version 1 Non Slide (Work fine)" />
-
-                <Button
-                    android:id="@+id/bt_1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:text="Version 2 Slide Video (Doing)" />
-
             </LinearLayout>
+
+            <Button
+                android:id="@+id/bt_start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@color/bt_login"
+                android:text="START"
+                android:textColor="@color/White"
+                android:textSize="@dimen/txt_30"
+                android:textStyle="bold" />
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
